--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "@types/node": "^14.14.25",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "@fluent/syntax": "^0.16.1",
+    "gettext-parser": "^4.0.4"
   }
 }
