--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mozilla (https://mozilla.org/)",
   "license": "MPL-2.0",
   "devDependencies": {
+    "@types/gettext-parser": "^4.0.0",
     "@types/node": "^14.14.25",
     "typescript": "^4.1.5"
   },
